mobile spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1087,9 +1087,9 @@ a:hover {
   background-attachment: scroll;
 }
 
-.intro .intro-content {
+/* .intro .intro-content {
   position: absolute;
-}
+} */
 
 .intro .intro-body {
   padding-left: 1rem;
